--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "types": ["chrome", "node", "vitest/globals"],
     "baseUrl": "."
   },
-  "include": ["src", "tests", "vite.config.ts"]
+  "include": ["src", "tests", "vite.config.ts", "vitest.config.ts"]
 }
