--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "description": "Private multi-platform cookie export extension (MV3) with Medium adapter v1.",
+  "description": "Private universal cookie session export/import extension (MV3) with signed artifacts.",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +16,7 @@
     "@types/chrome": "^0.1.24",
     "@types/node": "^22.13.5",
     "archiver": "^7.0.1",
+    "type-fest": "^5.4.4",
     "typescript": "^5.7.3",
     "vite": "^7.2.4",
     "vitest": "^2.1.9"
